--- a/pages/privacy/index.html
+++ b/pages/privacy/index.html
@@ -1,90 +1,99 @@
-<!DOCTYPE html><html lang="en" class="scroll-smooth light"><head>
+<!DOCTYPE html>
+<html lang="en" class="scroll-smooth">
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Privacy Policy — Web IDE</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Web IDE</title>
+    <link rel="icon" href="../../images/favicon/favicon.jpg" type="image/jpeg">
+    
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7032818106673619" crossorigin="anonymous"></script>
+
+    <!-- Google Tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H5XN0H3N96"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-H5XN0H3N96');
+    </script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&amp;family=Space+Grotesk:wght@500;700;800&amp;display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Plus+Jakarta+Sans:wght@700;800&family=Outfit:wght@500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="../../assets/css/styles.css">
+    <link rel="stylesheet" href="style.css">
     <script>
         tailwind.config = {
             theme: {
                 extend: {
                     colors: {
-                        brand: { 50: '#f0f9ff', 100: '#e0f2fe', 200: '#bae6fd', 300: '#7dd3fc', 400: '#38bdf8', 500: '#0ea5e9', 600: '#0284c7', 700: '#0369a1', 800: '#075985', 900: '#0c4a6e' },
-                        accent: { light: '#2dd4bf', DEFAULT: '#0d9488', dark: '#115e59' }
+                        dark: '#050505',
+                        surface: '#0F0F0F',
+                        accent: '#007AFF',
+                        slate: '#94A3B8',
                     },
                     fontFamily: {
-                        heading: ['Space Grotesk', 'sans-serif'],
-                        body: ['Inter', 'sans-serif'],
+                        sans: ['Inter', 'sans-serif'],
+                        display: ['Outfit', 'Plus Jakarta Sans', 'sans-serif'],
                     }
                 }
             }
         }
     </script>
-    <link rel="stylesheet" href="../../style.css">
-    <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="../docs/style.css"><link rel="stylesheet" href="../blog/style.css"><link rel="stylesheet" href="../blog/styles/post.css"><link rel="stylesheet" href="../about/style.css"><link rel="stylesheet" href="../contact/style.css"><link rel="stylesheet" href="../terms/style.css"></head>
-<body class="font-body text-slate-50 bg-main antialiased selection:bg-brand-500/30 selection:text-brand-200 overflow-x-hidden">
+</head>
+<body class="bg-dark text-white antialiased selection:bg-accent/30 selection:text-white">
+    <nav id="main-nav" class="fixed top-0 w-full z-50 border-b border-white/5 bg-dark/80 backdrop-blur-xl">
+        <div class="max-w-7xl mx-auto px-6 h-16 flex items-center justify-between">
+            <a href="../../index.html" class="flex items-center gap-3">
+                <div class="w-8 h-8 bg-accent rounded-lg flex items-center justify-center overflow-hidden">
+                    <img src="../../images/favicon/favicon.jpg" alt="Web IDE Logo" class="w-full h-full object-cover">
+                </div>
+                <span class="font-display font-bold text-lg tracking-tight">Web IDE</span>
+            </a>
+            <a href="../../index.html" class="text-sm font-medium text-slate hover:text-white transition-colors">Back to Home</a>
+        </div>
+    </nav>
 
-    <!-- Header -->
-    <header class="fixed w-full top-0 z-50 transition-all duration-300 border-b border-white/10 bg-[#050505]/95 backdrop-blur-md">
-        <div class="mx-auto max-w-7xl px-6">
-            <div class="flex items-center justify-between h-16">
-                <a href="../../index.html" class="flex items-center gap-3 group">
-                     <img src="../../assets/icon/webidesqaureicon.jpg" alt="Web IDE" class="w-8 h-8 rounded-lg border border-white/10 shadow-sm">
-                    <span class="font-heading font-bold text-lg text-white">Web IDE <span class="text-white/40 font-normal">Privacy</span></span>
-                </a>
-                <nav class="hidden md:flex items-center gap-6">
-                     <a href="../../index.html" class="text-sm font-medium text-white/60 hover:text-white transition">Home</a>
-                     <a href="../contact/index.html" class="text-sm font-medium text-white/60 hover:text-white transition">Contact</a>
-                </nav>
+    <main class="pt-32 pb-24 px-6">
+        <div class="max-w-3xl mx-auto">
+            <header class="mb-16 reveal-up">
+                <h1 class="text-5xl font-display font-bold mb-6 tracking-tight">Privacy Policy</h1>
+                <p class="text-slate">Last updated: May 24, 2024</p>
+            </header>
+
+            <div class="prose prose-invert max-w-none space-y-12 text-slate leading-relaxed">
+                <section class="reveal-up">
+                    <h2 class="text-2xl font-bold text-white mb-4">Information Collection</h2>
+                    <p>We do not collect or store your personal source code on our servers. All code editing happens locally on your device. We collect minimal diagnostic data and usage statistics to improve the app's performance and stability.</p>
+                </section>
+
+                <section class="reveal-up">
+                    <h2 class="text-2xl font-bold text-white mb-4">How Information is Used</h2>
+                    <p>Collected data is used to provide, maintain, and improve the Service, to monitor usage, and to detect, prevent, and address technical issues.</p>
+                </section>
+
+                <section class="reveal-up">
+                    <h2 class="text-2xl font-bold text-white mb-4">Data Security</h2>
+                    <p>The security of your data is important to us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. We strive to use commercially acceptable means to protect your Personal Data.</p>
+                </section>
+
+                <section class="reveal-up">
+                    <h2 class="text-2xl font-bold text-white mb-4">User Rights</h2>
+                    <p>You have the right to access, update or delete the information we have on you. Whenever made possible, you can access, update or request deletion of your Personal Data directly within your account settings section.</p>
+                </section>
             </div>
         </div>
-    </header>
+    </main>
 
-    <!-- Content -->
-    <section class="pt-32 pb-20 px-6">
-        <div class="container mx-auto max-w-3xl">
-            <h1 class="text-4xl md:text-5xl font-heading font-bold mb-10">Privacy Policy</h1>
-            
-            <div class="prose prose-lg prose-invert max-w-none text-white/70">
-                <p>Last updated: October 27, 2023</p>
-                <p>At Web IDE, we take your privacy seriously. This Privacy Policy explains how we collect, use, and protect your personal information.</p>
-
-                <h3 class="text-white font-bold text-xl mt-8 mb-4">1. Information We Collect</h3>
-                <p>We collect information that you provide directly to us, such as when you create an account, subscribe to our newsletter, or contact us for support. This may include your email address, name, and usage data.</p>
-
-                <h3 class="text-white font-bold text-xl mt-8 mb-4">2. How We Use Your Information</h3>
-                <ul class="list-disc pl-5 space-y-2">
-                    <li>To provide and maintain our Service.</li>
-                    <li>To notify you about changes to our Service.</li>
-                    <li>To provide customer support.</li>
-                    <li>To monitor the usage of the Service.</li>
-                </ul>
-
-                <h3 class="text-white font-bold text-xl mt-8 mb-4">3. Local Data Storage</h3>
-                <p>Web IDE is designed to run locally on your device. Your code projects, files, and assets are stored on your device's local storage and are not uploaded to our servers unless you explicitly choose to export or sync them.</p>
-
-                <h3 class="text-white font-bold text-xl mt-8 mb-4">4. Contact Us</h3>
-                <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:privacy@webide.app" class="text-brand-400">privacy@webide.app</a>.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="border-t border-white/10 bg-black/40 backdrop-blur-sm pt-12 pb-8">
-        <div class="container mx-auto max-w-7xl px-6 flex flex-col items-center">
-             <div class="text-sm text-white/40">© <span id="year"></span> Web IDE app. All rights reserved.</div>
+    <footer class="py-12 border-t border-white/5">
+        <div class="max-w-7xl mx-auto px-6 text-center text-xs text-slate/50 uppercase tracking-widest">
+            <p>&copy; 2024 Web IDE. All rights reserved.</p>
         </div>
     </footer>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const theme = localStorage.getItem('theme');
-            if (theme === 'light') document.documentElement.classList.add('light');
-            document.getElementById('year').textContent = new Date().getFullYear();
-        });
-    </script>
-
-<script src="../../script.js"></script><script src="../docs/script.js"></script><script src="../blog/script.js"></script><script src="../blog/actions/interactions.js"></script><script src="../about/script.js"></script><script src="../contact/script.js"></script></body></html>
+    <script src="../../assets/js/main.js"></script>
+</body>
+</html>
