--- a/index.html
+++ b/index.html
@@ -424,8 +424,8 @@
                         <h3 class="text-4xl font-bold mb-2">Pro IDE</h3>
                         <p class="text-slate mb-8">Unlock advanced AI and productivity tools.</p>
                         <div class="space-y-2 mb-10">
-                            <div class="text-4xl font-bold">$4.99 <span class="text-base text-slate font-normal">/month</span></div>
-                            <div class="text-sm text-accent font-medium">Or $14.99 /year (Save 75%)</div>
+                            <div class="text-4xl font-bold">$8.99 <span class="text-base text-slate font-normal">/month</span></div>
+                            <div class="text-sm text-accent font-medium">Or $24.99 /year (Save 75%)</div>
                         </div>
 
                         <ul class="space-y-5 mb-12">
@@ -473,7 +473,7 @@
                                     Unlock <span class="text-transparent bg-clip-text bg-gradient-to-r from-white to-slate-400">Pro Features</span>
                                 </h2>
                                 <p class="text-slate text-lg mb-8 leading-relaxed">
-                                    Get 3 months of unlimited AI requests and cloud shell access completely free. Use the code below to upgrade your workspace.
+                                    Reduce your AI uses by 10 and increase the AI Limits and cloud shell access completely free. Use the code below to upgrade your workspace.
                                 </p>
                                 
                                 <div class="flex flex-col sm:flex-row gap-4">
@@ -482,7 +482,7 @@
                                         <span id="offer-btn-text">Reveal Code</span>
                                     </button>
                                     <p class="text-xs text-slate/40 mt-4 sm:mt-0 sm:self-center">
-                                        *Valid for new accounts only.
+                                        *Valid for a limited period of time.
                                     </p>
                                 </div>
                             </div>
