ok (index.html)

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                                     Unlock <span class="text-transparent bg-clip-text bg-gradient-to-r from-white to-slate-400">Pro Features</span>
                                 </h2>
                                 <p class="text-slate text-lg mb-8 leading-relaxed">
-                                    Reduce your AI uses by 10increase the AI Limits and cloud shell access completely free. Use the code below to upgrade your workspace.
+                                    Reduce your AI uses by 10, increase the AI Limits and cloud shell access completely free. Use the code below to upgrade your workspace.
                                 </p>
                                 
                                 <div class="flex flex-col sm:flex-row gap-4">
