fixes (index.html)

--- a/index.html
+++ b/index.html
@@ -311,53 +311,12 @@
             </div>
         </section>
 
-        <!-- Android Download Section -->
-        <section id="android-download" class="py-24 px-6 border-t border-white/5">
-            <div class="max-w-7xl mx-auto">
-                <div class="grid md:grid-cols-2 gap-12 items-center">
-                    <div class="reveal-up">
-                        <h2 class="text-3xl md:text-5xl font-display font-bold mb-6">Android Integration</h2>
-                        <p class="text-slate text-lg mb-10 leading-relaxed">
-                            Experience the power of Web IDE on your Android devices. While we are currently rebuilding the engine for the next generation of mobile development, you can still access our legacy version for essential coding tasks.
-                        </p>
-                        <div class="flex flex-wrap gap-4">
-                            <a href="https://web-ide.en.uptodown.com/android/download" target="_blank" class="flex items-center gap-3 px-8 py-4 bg-white text-dark rounded-2xl font-bold hover:bg-accent hover:text-white transition-all transform hover:-translate-y-1 shadow-lg">
-                                <i class="fa-brands fa-android text-2xl text-green-500"></i>
-                                <div class="text-left">
-                                    <div class="text-[10px] uppercase opacity-70 leading-none mb-1 tracking-widest">Download Legacy</div>
-                                    <div class="text-lg leading-none">Android APK</div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    
-                    <div class="reveal-up delay-200">
-                        <div class="p-8 md:p-10 rounded-[2.5rem] bg-orange-500/5 border border-orange-500/20 flex gap-6 relative overflow-hidden group">
-                            <div class="absolute top-0 right-0 w-32 h-32 bg-orange-500/5 blur-3xl rounded-full"></div>
-                            <div class="w-14 h-14 rounded-2xl bg-orange-500/10 flex items-center justify-center flex-none text-orange-400 group-hover:scale-110 transition-transform">
-                                <i class="fa-solid fa-triangle-exclamation text-2xl"></i>
-                            </div>
-                            <div class="relative z-10">
-                                <h4 class="text-xl font-bold text-orange-400 mb-3">Development Notice</h4>
-                                <p class="text-slate leading-relaxed">
-                                    The Android version is currently in a <strong>Legacy Status</strong> while we rebuild the core engine to match our iOS performance. 
-                                </p>
-                                <p class="text-slate/60 text-sm mt-4 italic">
-                                    Recommended: Use our iOS version for the most up-to-date AI features and cloud shell capabilities.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <!-- Supported Languages Section -->
         <section id="languages" class="py-24 px-6 border-y border-white/5">
             <div class="max-w-7xl mx-auto">
                 <div class="text-center mb-16 reveal-up">
                     <h2 class="text-3xl md:text-4xl font-display font-bold mb-4">Code in any language</h2>
-                    <p class="text-slate">Syntax highlighting and intelligent support for 40+ languages and frameworks.</p>
+                    <p class="text-slate">Syntax highlighting and intelligent support for 10+ languages and frameworks.</p>
                 </div>
                 
                 <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-4">
@@ -448,7 +407,7 @@
                             </li>
                             <li class="flex items-center gap-4 text-slate">
                                 <div class="w-6 h-6 rounded-full bg-white/5 flex items-center justify-center text-[10px] text-slate flex-shrink-0"><i class="fa-solid fa-check"></i></div>
-                                40+ Language Support
+                                10+ Language Support
                             </li>
                             <li class="flex items-center gap-4 text-slate">
                                 <div class="w-6 h-6 rounded-full bg-white/5 flex items-center justify-center text-[10px] text-slate flex-shrink-0"><i class="fa-solid fa-check"></i></div>
@@ -465,18 +424,18 @@
                         <h3 class="text-4xl font-bold mb-2">Pro IDE</h3>
                         <p class="text-slate mb-8">Unlock advanced AI and productivity tools.</p>
                         <div class="space-y-2 mb-10">
-                            <div class="text-4xl font-bold">$9.99 <span class="text-base text-slate font-normal">/month</span></div>
-                            <div class="text-sm text-accent font-medium">Or $44.99 /year (Save 75%)</div>
+                            <div class="text-4xl font-bold">14.99 <span class="text-base text-slate font-normal">/month</span></div>
+                            <div class="text-sm text-accent font-medium">Or $89.99 /year (Save 50%)</div>
                         </div>
 
                         <ul class="space-y-5 mb-12">
                             <li class="flex items-center gap-4">
                                 <div class="w-6 h-6 rounded-full bg-accent/20 text-accent flex items-center justify-center text-[10px] flex-shrink-0"><i class="fa-solid fa-check"></i></div>
-                                Unlimited AI Pair Programming
+                                Unlimited AI Request
                             </li>
                             <li class="flex items-center gap-4">
                                 <div class="w-6 h-6 rounded-full bg-accent/20 text-accent flex items-center justify-center text-[10px] flex-shrink-0"><i class="fa-solid fa-check"></i></div>
-                                Integrated Cloud Shell
+                                Github Integration
                             </li>
                             <li class="flex items-center gap-4">
                                 <div class="w-6 h-6 rounded-full bg-accent/20 text-accent flex items-center justify-center text-[10px] flex-shrink-0"><i class="fa-solid fa-check"></i></div>
@@ -484,7 +443,7 @@
                             </li>
                             <li class="flex items-center gap-4">
                                 <div class="w-6 h-6 rounded-full bg-accent/20 text-accent flex items-center justify-center text-[10px] flex-shrink-0"><i class="fa-solid fa-check"></i></div>
-                                Advanced Editor Themes
+                                Advanced Editor Features
                             </li>
                         </ul>
                         <button onclick="window.location.href='https://apps.apple.com/us/app/web-ide-ai-code-editor/id6751813522'" class="w-full py-5 bg-accent text-white rounded-2xl font-bold hover:bg-accent-dark transition-all transform hover:-translate-y-1 shadow-xl uppercase tracking-widest text-xs">Upgrade to Pro</button>
