--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <nav class="flex flex-col gap-6 text-lg font-medium">
                 <a href="#features" class="mobile-nav-link">Features</a>
                 <a href="pages/docs/index.html" class="mobile-nav-link">Documentation</a>
+                <a href="prompts/market/index.html" class="mobile-nav-link">Prompts Market</a>
                 <a href="#ai-showcase" class="mobile-nav-link">AI Capabilities</a>
                 <a href="#pricing" class="mobile-nav-link">Pricing</a>
                 <a href="pages/contact/index.html" class="mobile-nav-link">Contact</a>
@@ -114,6 +115,7 @@
                 <div class="flex items-center gap-8 text-sm font-medium text-slate">
                     <a href="#features" class="nav-link">Features</a>
                     <a href="pages/docs/index.html" class="nav-link">Documentation</a>
+                    <a href="prompts/market/index.html" class="nav-link">Prompts Market</a>
                     <a href="#ai-showcase" class="nav-link">AI Capabilities</a>
                     <a href="#pricing" class="nav-link">Pricing</a>
                 </div>
@@ -566,7 +568,7 @@
             </div>
         </div>
         <div class="max-w-7xl mx-auto mt-20 pt-8 border-t border-white/5 flex flex-col sm:flex-row justify-between items-center gap-4 text-xs text-slate/50 uppercase tracking-widest font-bold">
-            <p>&copy; 2024 Web IDE. All rights reserved.</p>
+            <p>&copy; 2026 Web IDE. All rights reserved.</p>
             <div class="flex gap-6">
                 <a href="https://apps.apple.com/us/app/web-ide-ai-code-editor/id6751813522" class="hover:text-white transition-colors">View on App Store</a>
             </div>
